change about page

--- a/_config.yml
+++ b/_config.yml
@@ -28,5 +28,6 @@ github:
 gems: [jekyll-paginate, jekyll-gist]
 
 pages_list:       
-  About: 'http://www.antonioscatoloni.it'
+#  About: 'http://www.antonioscatoloni.it'
+  About: '/about'
   Archive: '/archive'
