--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,6 @@ github:
 gems: [jekyll-paginate, jekyll-gist]
 
 pages_list:       
-#  About: 'http://www.antonioscatoloni.it'
-  About: '/about'
+About: 'http://www.antonioscatoloni.it'
+# About: '/about'
   Archive: '/archive'
