new post -> codemotion una bella giornata second parte

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,13 @@ version:             0.1.0
 github:
   repo:              https://github.com/ascatox/ascatox.github.io
 
-gems: [jekyll-paginate, jekyll-gist]
+gems: [jekyll-paginate, jekyll-gist, jemoji, jekyll-twitter-plugin]
+
+twitter:
+ consumer_key: LkQHjNQPlmAA8Sya8SKgINM1Q
+ consumer_secret: IbKVS77eJu9RrVQw8jQ2oytfYcVnCzB3Y7Vs8mrqrs1Z6Bv0Fm
+ access_token: 16308202-GAFmaaEAgpc348fU85YZksJlfDJYPUle2nqCvCWqD
+ access_token_secret: fzlWY0Nnre88J20psqYciYfsoUaytMP9N46UxzrV6im7C
 
 
 # This is the list of pages to include in the header of the website.
@@ -36,3 +42,5 @@ pages_list:
   Archive: '/archive'
   Tags: '/tag'
   Feed: '/atom.xml'
+  
+  
