--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ excerpt_separator:  "<!--more-->"
 
 # Setup
 title:               Antonio Scatoloni
-tagline:             Information Technoogy and Beyond
+tagline:             Information Technoogy and Beyond 2.0
 url:                 http://ascatox.github.io
 paginate:            5
 baseurl:             ""
